--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-    #
+    <div id="header">
+        <div id="container">
+<nav>
+    <img src="Images/Rashad Humphrey Header Image.jfif" class="logo">
+<ul id="sidemenu">
+    <li>
+<a href="#header">Home</a>
+<a href="#about">About</a>
+<a href="#service">Service</a>
+<a href="#portfolio">Portfolio</a>
+<a href="#contact">Contact</a>
+    </li>
+</ul>
+</nav>
+        </div>
+    </div>
     </body>
 </html>
