--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     </li>
 </ul>
 </nav>
+<div class="header-text">
+    <p>Front-End Web Developer</p>
+    <h1>Hi I'm <span>Ra-the-Coder</span><br>from Los Angeles.</h1>
+</div>
         </div>
     </div>
     </body>
