CSS Styling to the .header-text,  header section complete

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </nav>
 <div class="header-text">
     <p>Front-End Web Developer</p>
-    <h1>Hi I'm <span>Ra-the-Coder</span><br>from Los Angeles.</h1>
+    <h1>Hi I'm <span>"Ra-the-Coder"</span><br>from Los Angeles.</h1>
 </div>
         </div>
     </div>
