--- a/index.html
+++ b/index.html
@@ -29,7 +29,19 @@
     </div>
 
 <!-- -----------------About----------------- -->
-
+<div id="about">
+    <div class="container">
+        <div class="row">
+            <div class="about-col-1">
+                <img src="Images/Web Development Picture.jpg">
+                <div class="about-col-2">
+                    <h1 class="sub-title"></h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta fugit architecto vero similique ratione voluptatibus sunt aperiam corrupti eos obcaecati iste, commodi distinctio culpa? Maiores eligendi quia animi ex illo.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
     </body>
 </html>
