--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="Images/Web Development Picture.jpg">
+                <img src="Images/Computer Programmer.jpeg">
                 <div class="about-col-2">
                     <h1 class="sub-title"></h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta fugit architecto vero similique ratione voluptatibus sunt aperiam corrupti eos obcaecati iste, commodi distinctio culpa? Maiores eligendi quia animi ex illo.</p>
