about section complete

--- a/index.html
+++ b/index.html
@@ -38,10 +38,37 @@
                     <h1 class="sub-title">About Me</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta fugit architecto vero similique ratione voluptatibus sunt aperiam corrupti eos obcaecati iste, commodi distinctio culpa? Maiores eligendi quia animi ex illo.</p>
                 </div>
+                <div class="tab-titles">
+                    <p class="tab-links active-links">Skills</p>
+                    <p class="tab-links active-links">Experience</p>
+                    <p class="tab-links active-links">Education</p>
+                </div>
+                <div class="tab-contents active-tab" id="skills">
+                    <ul>
+                    <li><span>UI/UX</span><br>Designing Web Designing/App interfaces</li>
+                    <li><span>Web Development</span><br>Designing Web Designing/App interfaces</li>
+                    <li><span>App Development</span><br>Building Android/IOS apps</li>
+                </ul>
+                </div>
+                <div class="tab-contents active-tab" id="experience">
+                    <ul>
+                        <li><span>2024 - Current</span><br>UI/UX Design Trading at ET Institute</li>
+                        <li><span>2023 - 2024</span><br>Team Lead at StarApp, LLC.</li>
+                        <li><span>2022 - 2023</span><br>UI/UX Design Executive at Coin Digital Ltd.</li>
+                        <li><span>2022 - 2021</span><br>Internship at ekart eCommerce</li>
+                    </ul>
+                </div>
+                <div class="tab-contents active-tab" id="education"><ul>
+                    <li><span>2016</span><br>UI/UX Design Training at ET Institute</li>
+                    <li><span>2016</span><br>MBA from MIT Bangalore</li>
+                    <li><span>2016</span><br>BBA from ISM Bangalore</li>
+                </ul>
+            </div>
             </div>
         </div>
     </div>
 </div>
+<!-- ---------------service------------------ -->
 
     </body>
 </html>
