--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <li>
 <a href="#header">Home</a>
 <a href="#about">About</a>
-<a href="#service">Service</a>
+<a href="#services">Services</a>
 <a href="#portfolio">Portfolio</a>
 <a href="#contact">Contact</a>
     </li>
@@ -97,6 +97,10 @@
         </div>
     </div>
 </div>
+
+<!-- ------------------portfolio---------------------- -->
+<div id="portfoli0"></div>
+
 
 <script>
     var tablinks = document.getElementsByClassName("tab-links");
