--- a/index.html
+++ b/index.html
@@ -99,7 +99,30 @@
 </div>
 
 <!-- ------------------portfolio---------------------- -->
-<div id="portfoli0"></div>
+<div id="portfolio">
+    <div class="container">
+        <h1 class="sub-title">My Work</h1>
+    </div>
+    <div class="work-list">
+        <div class="work">
+            <img src="Images/lines of code.jpeg">
+            <div class="layer">
+                <h3>Social Media App</h3>
+                <p>The app connects you to the talent people around the world. Download it from play store.</p>
+                <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
+        </div>
+        <div class="work">
+            <img src="Images/Web Development Picture.jpg">
+            <div class="layer">
+                <h3>Music App</h3>
+                <p>The app connects you to the talent people around the world. Download it from play store.</p>
+                <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+            </div>
+        </div>
+    </div>
+    <a href="#" class="btn">See more</a>
+</div>
 
 
 <script>
