html and css complete for contact

--- a/index.html
+++ b/index.html
@@ -124,6 +124,37 @@
     <a href="#" class="btn">See more</a>
 </div>
 
+<!-- -----------contact--------------- -->
+<div id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="contact-list">
+                <h1 class="sub-title">Contact Me</h1>
+                <p><i class="fa-solid fa-paper-plane">contact@example.com</i></p>
+                <p><i class="fa-solid fa-square-phone">9999999</i></p>
+                <div class="social-icons">
+                    <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://twitter.com"><i class="fa-brands fa-twitter-square"></i></a>
+                    <a href="https://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://twitter.com"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+                <a href="Images/On the computer.jpeg" download class="btn btn2">Download</a>
+            </div>
+            <div class="contact-right">
+                <form name="submit-to-google-sheets">
+                    <input type="text" name="Name" placeholder="Your Name" required>
+                    <input type="email" name="Email" placeholder="Your Email" required>
+                    <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                    <button type="submit" class="btn btn2">Submit</button>
+                </form>
+                <span id="msg"></span>
+            </div>
+        </div>
+    </div>
+    <div class="copyright">
+        <p>Copyright @ Rashad Humphrey.<i class="fa-solid fa-heart"></i></p>
+    </div>
+</div>
 
 <script>
     var tablinks = document.getElementsByClassName("tab-links");
