Google Sheet Functionality Completed

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <a href="Images/On the computer.jpeg" download class="btn btn2">Download</a>
             </div>
             <div class="contact-right">
-                <form name="submit-to-google-sheets">
+                <form name="submit-to-google-sheet">
                     <input type="text" name="Name" placeholder="Your Name" required>
                     <input type="email" name="Email" placeholder="Your Email" required>
                     <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
@@ -174,15 +174,34 @@
 </script>
 
 <script>
-    var sidemeu = document.getElementById("sidemenu");
+    var sidemenu = document.getElementById("sidemenu");
 
     function openmenu(){
-        sidemeu.style.right = "0";
+        sidemenu.style.right = "0";
     }
     function closemenu(){
-        sidemeu.style.right = "-200px";
+        sidemenu.style.right = "-200px";
     }
 </script>
+
+<script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwo2fgnhESIBoAqUSqGsHie2p9Q4kO7xAa3hkH00W50civCL4xpikdqsAkozAxk738SVQ/exec'
+    const form = document.forms['submit-to-google-sheet']
+    const msg = document.getElementById("msg")
+  
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => {
+            msg.innerHTML = "Got It!!!!!"
+            setTimeout(function(){
+                msg.innerHTML = ""
+            },5000)
+            form.reset()
+        })
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
 
     </body>
 </html>
