Website is Complete

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <img src="Images/Computer Programmer.jpeg">
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta fugit architecto vero similique ratione voluptatibus sunt aperiam corrupti eos obcaecati iste, commodi distinctio culpa? Maiores eligendi quia animi ex illo.</p>
+                    <p>I'm a recent graduate from the University of North Illinois's Web Development Program.  I have a full stack certification that specializes in front-end and back-end web development.  I have worked on various projects as well as my own private projects.</p>
                 </div>
                 <div class="tab-titles">
                     <p class="tab-links active-links" onclick="opentab('skills')">Skills</p>
@@ -48,23 +48,23 @@
                 </div>
                 <div class="tab-contents active-tab" id="skills">
                     <ul>
-                    <li><span>UI/UX</span><br>Designing Web Designing/App interfaces</li>
-                    <li><span>Web Development</span><br>Designing Web Designing/App interfaces</li>
+                    <li><span>Front-End Developer</span><br>Designing Web Designing/API construction</li>
+                    <li><span>Back-End Developer</span><br>Designing Web Designing/App interfaces</li>
                     <li><span>App Development</span><br>Building Android/IOS apps</li>
                 </ul>
                 </div>
                 <div class="tab-contents active-tab" id="experience">
                     <ul>
-                        <li><span>2024 - Current</span><br>UI/UX Design Trading at ET Institute</li>
-                        <li><span>2023 - 2024</span><br>Team Lead at StarApp, LLC.</li>
-                        <li><span>2022 - 2023</span><br>UI/UX Design Executive at Coin Digital Ltd.</li>
+                        <li><span>2024 - Current</span><br>Team Lead at Heru Productons, LLC.</li>
+                        <li><span>2023 - 2024</span><br>Team Lead at Muran Code, LLC.</li>
+                        <li><span>2022 - 2023</span><br>Build Barkster for University of Northern Illinois</li>
                         <li><span>2022 - 2021</span><br>Internship at ekart eCommerce</li>
                     </ul>
                 </div>
                 <div class="tab-contents active-tab" id="education"><ul>
-                    <li><span>2016</span><br>UI/UX Design Training at ET Institute</li>
-                    <li><span>2016</span><br>MBA from MIT Bangalore</li>
-                    <li><span>2016</span><br>BBA from ISM Bangalore</li>
+                    <li><span>2020</span><br>Front-End development University of Northern Illinois</li>
+                    <li><span>2020</span><br>Back-End development University of Northern Illinois</li>
+                    <li><span>2020</span><br>App development University of Northern Illinois</li>
                 </ul>
             </div>
             </div>
@@ -78,20 +78,20 @@
         <div class="services-list">
             <div>
                 <i class="fa-solid fa-code"></i>
-                <h2>Web Design</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, perferendis. Molestiae, quos. Reiciendis excepturi deserunt ratione laborum temporibus ex minus consectetur voluptatem atque debitis amet, aliquam enim voluptate doloribus fugit?</p>
+                <h2>Front-End Developer</h2>
+                <p>I specialize in HTML, CSS and JavaScript.  I'm familiar with ReactJS, Python Django, wire-frame and Angular.  I can also build APIs.</p>
                 <a href="#">Learn More</a>
             </div>
             <div>
                 <i class="fa-solid fa-crop-simple"></i>
-                <h2>UI/UX Designer</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem autem veniam ipsum cupiditate illum, deserunt, ipsam asperiores dolor molestiae eum, aperiam odio? Itaque voluptatibus quidem deserunt maxime est, quod vero!</p>
+                <h2>Back-End Developer</h2>
+                <p>I'm familiar with SQL, TypeScript and Node.js.</p>
                 <a href="#">Learn More</a>
             </div>
             <div>
                 <i class="fa-brands fa-app-store"></i>
                 <h2>App Design</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure ullam doloremque eos suscipit enim, sunt maxime, aperiam totam nisi porro sed iusto tempora, vel quas expedita rem. Magni, inventore est.</p>
+                <p>I'm familiar with native app as well as Python.</p>
                 <a href="#">Learn More</a>
             </div>
         </div>
@@ -105,23 +105,23 @@
     </div>
     <div class="work-list">
         <div class="work">
-            <img src="Images/lines of code.jpeg">
+            <img src="Images/pexels-energepiccom-110473.jpg">
             <div class="layer">
-                <h3>Social Media App</h3>
-                <p>The app connects you to the talent people around the world. Download it from play store.</p>
-                <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                <h3>To-Do-List App</h3>
+                <p>The app allows you to create a list of all the things that you must do during the day.</p>
+                <a href="https://raisgood.github.io/todolist-app" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
         </div>
         <div class="work">
-            <img src="Images/Web Development Picture.jpg">
+            <img src="Images/pexels-chevanon-photography-1108099.jpg">
             <div class="layer">
-                <h3>Music App</h3>
-                <p>The app connects you to the talent people around the world. Download it from play store.</p>
-                <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                <h3>Barkster App</h3>
+                <p>The app works like Tinder.  It allows you to choose your favorite dog.</p>
+                <a href="https://raisgood.github.io/barkster/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
         </div>
     </div>
-    <a href="#" class="btn">See more</a>
+    <a href="https://github.com/raisgood" target="_blank" class="btn">See more</a>
 </div>
 
 <!-- -----------contact--------------- -->
@@ -130,13 +130,13 @@
         <div class="row">
             <div class="contact-list">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fa-solid fa-paper-plane">contact@example.com</i></p>
-                <p><i class="fa-solid fa-square-phone">9999999</i></p>
+                <p><i class="fa-solid fa-paper-plane">rashadthecoder@gmail.com</i></p>
+                <p><i class="fa-solid fa-square-phone">424-309-3210</i></p>
                 <div class="social-icons">
-                    <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://twitter.com"><i class="fa-brands fa-twitter-square"></i></a>
-                    <a href="https://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://twitter.com"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://facebook.com/rashadhumphrey"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://twitter.com/rashadhumphrey"><i class="fa-brands fa-twitter-square"></i></a>
+                    <a href="https://linkedin.com/rashadhumphrey"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://twitter.com/rashadhumphrey"><i class="fa-brands fa-instagram"></i></a>
                 </div>
                 <a href="Images/On the computer.jpeg" download class="btn btn2">Download</a>
             </div>
