Website is Complete

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <img src="Images/pexels-energepiccom-110473.jpg">
             <div class="layer">
                 <h3>To-Do-List App</h3>
-                <p>The app allows you to create a list of all the things that you must do during the day.</p>
+                <p>The app allows you to create a schedule for each day.</p>
                 <a href="https://raisgood.github.io/todolist-app" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
         </div>
