Scroll to contact pages added to service page

--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
                 <i class="fa-solid fa-code"></i>
                 <h2>Front-End Developer</h2>
                 <p>I specialize in HTML, CSS and JavaScript.  I'm familiar with ReactJS, Python Django, wire-frame and Angular.  I can also build APIs.</p>
-                <a href="https://github.com/raisgood" target="blank">Learn More</a>
+                <a href="#contact">Learn More</a>
             </div>
             <div>
                 <i class="fa-solid fa-crop-simple"></i>
                 <h2>Back-End Developer</h2>
                 <p>I'm familiar with SQL, TypeScript and Node.js.</p>
-                <a href="https://github.com/raisgood" target="_blank">Learn More</a>
+                <a href="#contact">Learn More</a>
             </div>
             <div>
                 <i class="fa-brands fa-app-store"></i>
                 <h2>App Design</h2>
                 <p>I'm familiar with native app as well as Python.</p>
-                <a href="https://github.com/raisgood" target="_blank">Learn More</a>
+                <a href="#contact">Learn More</a>
             </div>
         </div>
     </div>
