--- a/index.html
+++ b/index.html
@@ -130,15 +130,13 @@
         <div class="row">
             <div class="contact-list">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fa-solid fa-paper-plane">rashadthecoder@gmail.com</i></p>
-                <p><i class="fa-solid fa-square-phone">424-309-3210</i></p>
+                <p><i class="fa-solid fa-paper-plane"><a href="mailto:rashadthecoder@gmail.com" target="_blank">rashadthecoder@gmail.com</a></i></p>
                 <div class="social-icons">
-                    <a href="https://facebook.com/rashadhumphrey"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://twitter.com/rashadhumphrey"><i class="fa-brands fa-twitter-square"></i></a>
-                    <a href="https://linkedin.com/rashadhumphrey"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://twitter.com/rashadhumphrey"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://facebook.com/rashadhumphrey" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://twitter.com/rashadhumphrey" target="_blank"><i class="fa-brands fa-twitter-square"></i></a>
+                    <a href="https://linkedin.com/rashadhumphrey" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://instagram.com/rashadhumphrey" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 </div>
-                <a href="Images/On the computer.jpeg" download class="btn btn2">Download</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
