--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                 <p><i class="fa-solid fa-paper-plane"><a href="mailto:rashadthecoder@gmail.com" target="_blank">rashadthecoder@gmail.com</a></i></p>
                 <div class="social-icons">
                     <a href="https://facebook.com/rashadhumphrey" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://twitter.com/rashadhumphrey" target="_blank"><i class="fa-brands fa-twitter-square"></i></a>
-                    <a href="https://linkedin.com/rashadhumphrey" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://instagram.com/rashadhumphrey" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://twitter.com/rashadthecoder" target="_blank"><i class="fa-brands fa-twitter-square"></i></a>
+                    <a href="https://linkedin.com/rashadthecoder" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://instagram.com/rashad.humphrey" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>
             <div class="contact-right">
@@ -150,7 +150,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>Copyright @ Rashad Humphrey.<i class="fa-solid fa-heart"></i></p>
+        <p>Copyright @ Rashad Humphrey</p>
     </div>
 </div>
 
